5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1717_2525.log
== TEST (2019-05-10 13:51:05) 
-- CODE:
num = int(input("Digite um numero seu merda: "))
while (num > 0):
	if (num % 2 == 0):
		num = num + 2
	else:
		num = num + 1
print(num)

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:52:21) 
-- CODE:
num = 0
while (num > 0):
	num = int(input("Digite um numero desgracado: "))
	if (num % 2 == 0):
		num = num + 2
	else:
		num = num + 1
print(num)

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:52:42) 
-- CODE:
num = 0
while (num > 0):
	num = int(input("Digite um numero desgracado: "))
	if (num % 2 == 0):
		num = num + 2
	else:
		num = num + 1
print(num)

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:52:58) 
-- CODE:
while (num > 0):
	num = int(input("Digite um numero desgracado: "))
	if (num % 2 == 0):
		num = num + 2
	else:
		num = num + 1
print(num)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    while (num > 0):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:53:38) 
-- CODE:
num = int(input("Digite um numero animal: ))
while (num > 0):
	num = int(input("Digite um numero desgracado: "))
	if (num % 2 == 0):
		num = num + 2
	else:
		num = num + 1
print(num)

-- ERROR:
File "XXXX", line 1
    num = int(input("Digite um numero animal: ))
                                               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:53:50) 
-- CODE:
num = int(input("Digite um numero animal:" ))
while (num > 0):
	num = int(input("Digite um numero desgracado: "))
	if (num % 2 == 0):
		num = num + 2
	else:
		num = num + 1
print(num)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:54:44) 
-- CODE:
num = int(input("Digite um numero animal:" ))
while (num != 0):
	num = int(input("Digite um numero desgracado: "))
	if (num % 2 == 0):
		num = num + 2
	else:
		num = num + 1
print(num)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:56:01) 
-- CODE:
http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1717#ola = 0
num = int(input("Digite um numero animal:" ))
while (num > 0):
	num = int(input("Digite um numero desgracado: "))
	num = num + ola
	if (num % 2 == 0):
		num = num + 2
	else:
		num = num + 1
print(num)

-- ERROR:
File "XXXX", line 1
    http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1717#ola = 0
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:56:11) 
-- CODE:
ola = 0
num = int(input("Digite um numero animal:" ))
while (num > 0):
	num = int(input("Digite um numero desgracado: "))
	num = num + ola
	if (num % 2 == 0):
		num = num + 2
	else:
		num = num + 1
print(num)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:56:57) 
-- CODE:
num = int(input("Digite um numero animal:" ))
while (num > 0):
	num = int(input("Digite um numero desgracado: "))
	if (num % 2 == 0):
		num = num + 2
	else:
		num = num + 1
print(num)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 13:59:53) 
-- CODE:
num = int(input("Digite um numero animal:" ))
divisores = 0
	if (num % 2 == 0):
		divisores = num + 2
	else:
		divisores = num + 1
	while (num > 0):
		num = num + divisores
print(num)

-- ERROR:
File "XXXX", line 3
    if (num % 2 == 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 14:00:12) 
-- CODE:
num = int(input("Digite um numero animal:" ))
divisores = 0
if (num % 2 == 0):
		divisores = num + 2
else:
		divisores = num + 1
while (num > 0):
		num = num + divisores
print(num)

-- ERROR:
File "XXXX", line 3
    if (num % 2 == 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
